@startuml Order_Builder_Design_Architecture

!pragma layout smetana

' Cấu hình phong cách giống Member 3
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 100

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classHeaderBackgroundColor #4A90D9
skinparam classHeaderFontColor #FFFFFF
skinparam classBorderColor #2C5F8A
skinparam classBackgroundColor #F0F7FF
skinparam stereotypeCBackgroundColor #E8F4FD
skinparam ArrowColor #2C5F8A

title Kiến trúc Khởi tạo Đơn hàng (Builder Pattern)

' =============================================
' 1. BUILDER PATTERN
' =============================================
package "Order Construction (Builder)" {
    class OrderBuilder {
        - customer : Customer
        - employee : Employee
        - promotion : Promotion
        - items : List<OrderItem>
        - status : OrderStatus
        - createdAt : LocalDateTime
        
        + {static} builder() : OrderBuilder
        + forCustomer(Customer) : OrderBuilder
        + handledBy(Employee) : OrderBuilder
        + withPromotion(Promotion) : OrderBuilder
        + withItems(List<OrderItem>) : OrderBuilder
        + build() : Order
    }

    class Order {
        - id : Integer
        - createdAt : LocalDateTime
        - status : OrderStatus
        - customer : Customer
        - approvedBy : Employee
        - promotion : Promotion
        - payment : Payment
        - items : List<OrderItem>
        + getFinalTotal() : BigDecimal
    }
    
    class OrderItem {
        - id : Long
        - variant : ProductVariant
        - quantity : int
        - unitPrice : BigDecimal
        - note : String
        - order : Order
        - toppings : List<OrderedTopping>
    }
}

' =============================================
' 2. FACTORY (Data Conversion)
' =============================================
package "Data Conversion (Factory)" {
    class OrderFactory {
        - variantRepository : ProductVariantRepository
        - toppingRepository : ToppingRepository
        + createOrder(customer: Customer, items: List<CartItemDTO>, note: String) : Order
    }
}

' =============================================
' 3. COORDINATOR (Facade)
' =============================================
package "Service Coordination" {
    class CheckoutFacade {
        - stockService : StockService
        - orderFactory : OrderFactory
        - priceService : PriceService
        - paymentService : PaymentService
        - checkoutService : CheckoutService
        + processCheckout(customer: Customer, request: CheckoutRequest) : Order
    }
}

' Execution / Relationships
OrderBuilder ..> Order : creates >
Order "1" *-- "many" OrderItem : contains >
OrderBuilder --> OrderItem : prepares >

' Factory usage
OrderFactory --> OrderBuilder : uses >
OrderFactory ..> OrderItem : creates >

' Facade usage
CheckoutFacade --> OrderFactory : requests order creation >

note bottom of OrderBuilder
  Builder Pattern tách biệt việc lắp ráp đối tượng 'Order' 
  phức tạp khỏi logic nghiệp vụ. 
  Đảm bảo tính nhất quán (Back-reference OrderItem <-> Order) 
  và dễ dàng mở rộng thêm các thuộc tính mới.
end note

@enduml
